*Empty MediaWiki Message*

--- a/Murino.mw
+++ b/Murino.mw
@@ -12,8 +12,8 @@ Murino om znamasine transportsol'm. Žilos sijadase:
 * [http://www.mur-admin.ru/ Murinon küläkundan oficialine sait]
 
 {{stub}}
-[[Kategorii:Lidnad]]
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Muurola (Inkeri)]]
 [[ru:Мурино (посёлок)]]
