*Empty MediaWiki Message*

--- a/Murino.mw
+++ b/Murino.mw
@@ -14,6 +14,7 @@ Murino om znamasine transportsol'm. Žilos sijadase:
 {{stub}}
 [[Kategorii:Leningradan agj]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Venäman küläd]]
 
 [[fi:Muurola (Inkeri)]]
 [[ru:Мурино (посёлок)]]
