Остальные актёры, если не считать смотрителя и др. "победителей".

--- a/Surmanlabirint.mw
+++ b/Surmanlabirint.mw
@@ -6,7 +6,10 @@
 * [[Žirardo Ippolit|Ippolit Žirardo]] — ''Francis''
 * [[S'juzi Emi]] — ''Kler''
 * [[Morven Kristi|Kristi Morven]] — ''Šona''
-da toižed.
+* [[Kapal'di Piter|Piter Kapal'di]] — ''Maks Roi''
+* [[Asher D]] — ''Al B''
+* Raffaello Degruttola — ''Džei''
+* [[Devis Džul'jenn|Džul'jenn Devis]] — ''Sintija''
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
