--- a/Mi?_Kus?_Konz?.mw
+++ b/Mi?_Kus?_Konz?.mw
@@ -1,6 +1,8 @@
 [[Fail:TV3 KKK Premjera 3.jpg|thumb|right|250px|Vändlaud i baraban]]
 '''Mi? Kus? Konz?''' ([[Venäkel'|ven.]] ''Что? Где? Когда?'') om intellektualine TV-oigenduz, lujas populärine [[Venäkel'|venäkeližes]] ümbrištos. Sen aluz om pandud vn [[1975]] sügüz'kun 4. päiväl, tegii i ezmäine vedai — [[Vorošilov Vladimir|Vladimir Vorošilov]].
 
+Nügüd'läine vedai om [[Krük Boris|Boris Krük]].
+
 {{stub}}
 
 == Irdkosketused ==
