*Empty MediaWiki Message*

--- a/Mi?_Kus?_Konz?.mw
+++ b/Mi?_Kus?_Konz?.mw
@@ -10,7 +10,9 @@ Nügüd'läine vedai om [[Krük Boris|Boris Krük]].
 * [http://chgk.tvigra.ru/ Oficialine sait]
 * [http://чтогдекогда.рф/ "Mi? Kus? Konz?":an internet-portal]
 
+[[Kategorii:TV-vändad]]
 [[Kategorii:Mi? Kus? Konz?]]
-[[Kategorii:TV-oigendused]]
+[[Kategorii:TV-šoud]]
+[[Kategorii:Ezmäine kanal]]
 
 [[ru:Что? Где? Когда?]]
