*Empty MediaWiki Message*

--- a/Mi?_Kus?_Konz?.mw
+++ b/Mi?_Kus?_Konz?.mw
@@ -3,15 +3,14 @@
 
 Nügüd'läine vedai om [[Krük Boris|Boris Krük]].
 
-{{stub}}
-
 == Irdkosketused ==
 
 * [http://chgk.tvigra.ru/ Oficialine sait]
 * [http://чтогдекогда.рф/ "Mi? Kus? Konz?":an internet-portal]
 
+{{stub}}
 [[Kategorii:TV-vändad]]
-[[Kategorii:Mi? Kus? Konz?]]
+[[Kategorii:Mi? Kus? Konz?|*]]
 [[Kategorii:TV-šoud]]
 [[Kategorii:Ezmäine kanal]]
 
