кавычки к статьям о фильмах

--- a/10,5_ballad_Rihteran_pordhišton_mödhe.mw
+++ b/10,5_ballad_Rihteran_pordhišton_mödhe.mw
@@ -1,4 +1,4 @@
-'''10,5 ballad Rihteran pordhištan mödhe''' ([[anglijan kel'|angl.]]: ''10.5'', [[venäkel']]žes versijas — ''10,5 баллов по шкале Рихтера'') om voden [[2004]] amerikalaine [[tedofantastik|tedofantastine]] kaks'serine fil'm. Režissör — [[Lafija Džon|Džon Lafija]].
+'''«10,5 ballad Rihteran pordhištan mödhe»''' ([[anglijan kel'|angl.]]: ''10.5'', [[venäkel']]žes versijas — ''10,5 баллов по шкале Рихтера'') om voden [[2004]] amerikalaine [[tedofantastik|tedofantastine]] kaks'serine fil'm. Režissör — [[Lafija Džon|Džon Lafija]].
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
