*Empty MediaWiki Message*

--- a/Kaikiden_uksiden_avadim.mw
+++ b/Kaikiden_uksiden_avadim.mw
@@ -1,4 +1,4 @@
-'''Kaikiden uksiden avadim''' ([[anglijan kel'|angl.]]: ''The Skeleton Key''; [[venäkel']]žes versijas — ''Ключ от всех дверей'') om voden [[2005]] [[AÜV|amerikalaine]] mistine triller. Režissör — [[Softli Ien|Ien Softli]].
+'''«Kaikiden uksiden avadim»''' ([[anglijan kel'|angl.]]: ''The Skeleton Key''; [[venäkel']]žes versijas — ''Ключ от всех дверей'') om voden [[2005]] [[AÜV|amerikalaine]] mistine triller. Režissör — [[Softli Ien|Ien Softli]].
 
 == Rolid ==
 * [[Hadson Keit|Keit Hadson]] — ''Kerolain''
