*Empty MediaWiki Message*

--- a/Kub_(fil'm,_1997).mw
+++ b/Kub_(fil'm,_1997).mw
@@ -1,4 +1,4 @@
-'''"Kub"''' ([[Anglijan kel'|angl.]] ''Cube'') om voden 1997 [[kanad]]alaine fantastine fil'm. Režissör  — [[Natali Vinčenco|Vinčenco Natali]]. Fil'man slogan — "Ala eci sü. Eci te irdha".
+'''«Kub»''' ([[Anglijan kel'|angl.]] ''Cube'') om voden 1997 [[kanad]]alaine fantastine fil'm. Režissör  — [[Natali Vinčenco|Vinčenco Natali]]. Fil'man slogan — „Ala eci sü. Eci te irdha“.
 
 == Kacu mugažo ==
 * [[Kub 2: Giperkub]]
