*Empty MediaWiki Message*

--- a/Sar'_(fil'm,_Venäma,_2006).mw
+++ b/Sar'_(fil'm,_Venäma,_2006).mw
@@ -1,4 +1,4 @@
-'''Sar'''' ([[venäkel'|ven.]] ''Остров'') — dramfil'm, kuvitadud vl. 2006 [[Venäma]]s, tobjimalaz [[Kem'|Kemiš]], [[Karjal|Pohjoižes Karjalas]].
+'''«Sar'»''' ([[venäkel'|ven.]] ''Остров'') — dramfil'm, kuvitadud vl. 2006 [[Venäma]]s, tobjimalaz [[Kem'|Kemiš]], [[Karjal|Pohjoižes Karjalas]].
 
 Režissör — [[Lungin Pavel Semönovič|Pavel Lungin]].
 
