*Empty MediaWiki Message*

--- a/Radajad_lähttas_"Lümjer"-fabrikaspäi.mw
+++ b/Radajad_lähttas_"Lümjer"-fabrikaspäi.mw
@@ -1,5 +1,5 @@
 [[Fail:Sortieusinelumiere.jpg|thumb|right|300px|Fil'man poster]]
-'''«Radajad lähttas "Lümjer"-fabrikaspäi»''' ([[Francijan kel'|fr.]] ''La Sortie de l'usine Lumière à Lyon'') om [[Lümjer-velled|Lümjer-velliden]] dokumentaline lühüdpiduzline fil'm. Nece om ezmäine fil'm [[kinematograf]]an istorijas.
+'''«Radajad lähttas „Lümjer“-fabrikaspäi»''' ([[Francijan kel'|fr.]] ''La Sortie de l'usine Lumière à Lyon'') om [[Lümjer-velled|Lümjer-velliden]] dokumentaline lühüdpiduzline fil'm. Nece om ezmäine fil'm [[kinematograf]]an istorijas.
 
 Ezmäižen kerdan se om ozutadud [[22. keväz'ku]]n [[1895]].
 
