*Empty MediaWiki Message*

--- a/Kut_minä_mänetin_necil_kezal.mw
+++ b/Kut_minä_mänetin_necil_kezal.mw
@@ -1,4 +1,4 @@
-'''"Kut minä mänetin necil kezal"''' ([[Venäkel'|ven.]] ''«Как я провёл этим летом»'') om voden 2010 [[Venäma|venälaine]] dramfil'm.
+'''«Kut minä mänetin necil kezal»''' ([[Venäkel'|ven.]] ''«Как я провёл этим летом»'') om voden 2010 [[Venäma|venälaine]] dramfil'm.
 
 Režissör — [[Popogrebskii Aleksei|Aleksei Popogrebskii]].
 
