*Empty MediaWiki Message*

--- a/Kub_zero.mw
+++ b/Kub_zero.mw
@@ -1,4 +1,4 @@
-'''"Kub zero"''' ([[Anglijan kel'|angl.]] ''Cube Zero'') om voden 2004 [[kanad]]alaine ulävaru- da fantastine fil'm. [[Kub (fil'm)|"Kub"]]-fil'man prikvel.
+'''«Kub zero»''' ([[Anglijan kel'|angl.]] ''Cube Zero'') om voden 2004 [[kanad]]alaine ulävaru- da fantastine fil'm. [[Kub (fil'm)|"Kub"]]-fil'man prikvel.
 
 Režissör  — [[Barbaraš Erni|Erni Barbaraš]].
 
