*Empty MediaWiki Message*

--- a/Kub_2:_Giperkub.mw
+++ b/Kub_2:_Giperkub.mw
@@ -1,4 +1,4 @@
-'''"Kub 2: Giperkub"''' ([[Anglijan kel'|angl.]] ''Cube 2: Hypercube'') om voden 2002 [[kanad]]alaine fantastine fil'm. [[Kub (fil'm)|"Kub"]]-fil'man jatk.
+'''«Kub 2: Giperkub»''' ([[Anglijan kel'|angl.]] ''Cube 2: Hypercube'') om voden 2002 [[kanad]]alaine fantastine fil'm. [[Kub (fil'm)|"Kub"]]-fil'man jatk.
 
 Režissör  — [[Sekula Andžei|Andžei Sekula]].
 
