*Empty MediaWiki Message*

--- a/Surmanlabirint.mw
+++ b/Surmanlabirint.mw
@@ -1,4 +1,4 @@
-'''Surmanlabirint''' ([[anglijan kel'|angl.]]: ''House of 9''; [[venäkel']]žes versijas — ''Смертельный лабиринт'') om voden [[2004]] britanijalaine triller. Režissör — [[Monro Stiven|Stiven Monro]].
+'''«Surmanlabirint»''' ([[anglijan kel'|angl.]]: ''House of 9''; [[venäkel']]žes versijas — ''Смертельный лабиринт'') om voden [[2004]] britanijalaine triller. Režissör — [[Monro Stiven|Stiven Monro]].
 
 == Rolid ==
 * [[Hopper Dennis|Dennis Hopper]] — ''t. Daffi''
