*Empty MediaWiki Message*

--- a/Tähthasižed_sodad.mw
+++ b/Tähthasižed_sodad.mw
@@ -1,5 +1,5 @@
 [[Fail:Star Wars Logo.svg|thumb|"Tähthasižiden voinoiden" logotip]]
-'''Tähthasižed voinad''' ([[Anglijan kel'|angl.]] ''Star Wars'') om epine tedofantastine sag.
+'''«Tähthasižed voinad»''' ([[Anglijan kel'|angl.]] ''Star Wars'') om epine tedofantastine sag.
 
 == Kinoepopei ==
 
