*Empty MediaWiki Message*

--- a/Vell'_(fil'm).mw
+++ b/Vell'_(fil'm).mw
@@ -1,4 +1,4 @@
-'''"Vell'"''' ([[Venäkel'|ven.]] ''Брат'') om voden 1997 [[Venäma|venälaine]] dram da torafil'm.
+'''«Vell'»''' ([[Venäkel'|ven.]] ''Брат'') om voden 1997 [[Venäma|venälaine]] dram da torafil'm.
 
 Režissör — [[Balabanov Aleksei|Aleksei Balabanov]].
 
