*Empty MediaWiki Message*

--- a/Vell'_2.mw
+++ b/Vell'_2.mw
@@ -1,4 +1,4 @@
-'''"Vell' 2"''' ([[Venäkel'|ven.]] ''Брат 2'') om voden 2000 [[Venäma|venälaine]] dram da torafil'm. [[Vell' (fil'm)|"Vell'"]]-fil'man jatkuz.
+'''«Vell' 2»''' ([[Venäkel'|ven.]] ''Брат 2'') om voden 2000 [[Venäma|venälaine]] dram da torafil'm. [[Vell' (fil'm)|"Vell'"]]-fil'man jatkuz.
 
 Režissör — [[Balabanov Aleksei|Aleksei Balabanov]].
 
