*Empty MediaWiki Message*

--- a/Windir.mw
+++ b/Windir.mw
@@ -34,14 +34,14 @@ Grupp om pästnus vl 2004, konz sen vokalist [[Terje Bakken|Valfar]] om kolnu. E
 * Vegard
 
 == Diskografii ==
-* 1994: ''Sogneriket'' (Demo)
-* 1995: ''Det gamle riket'' (Demo)
-* 1997: ''Sóknardalr''
-* 1999: ''Arntor''
-* 2001: ''1184''
-* 2003: ''Likferd''
-* 2004: ''Valfar, ein Windir''
-* 2005: ''SognaMetal'' (DVD)
+* 1994: ''[[Sogneriket]]'' (Demo)
+* 1995: ''[[Det gamle riket]]'' (Demo)
+* 1997: ''[[Sóknardalr]]''
+* 1999: ''[[Arntor]]''
+* 2001: ''[[1184]]''
+* 2003: ''[[Likferd]]''
+* 2004: ''[[Valfar, ein Windir]]''
+* 2005: ''[[SognaMetal]]'' (DVD)
 
 == Irdkosketused == 
 * [http://www.windir.no Oficialine sait]
