*Empty MediaWiki Message*

--- a/Windir.mw
+++ b/Windir.mw
@@ -17,7 +17,7 @@
 
 Grupp oli tehnus vl 1994 [[Sogndal]]as ([[Norvegii]]). Sen muzikas mustmetal garmoniruib fol'klorižen da mifologižen motivoidenke. Ezmäine al'bom om pästtud vl 1997. Pajoiden sur' pala om kirjutadud norvegijan kelen sogndaližel dialektal.
 
-Grupp om pästnus vl 2004, konz sen vokalist [[Terje Bakken|Valfar]] om kolnu. Enččed ühtnijad tegiba [[Vreid]] da [[Cor Scorpii]] gruppad.
+Grupp om pästnus vl 2004, konz sen vokalist [[Valfar]] om kolnu. Enččed ühtnijad tegiba [[Vreid]] da [[Cor Scorpii]] gruppad.
 
 == Mülükund ==
 === Jäl'gmäine mülükund ===
