*Empty MediaWiki Message*

--- a/Windir.mw
+++ b/Windir.mw
@@ -46,6 +46,8 @@ Grupp om pästnus vl 2004, konz sen vokalist [[Valfar]] om kolnu. Enččed ühtn
 == Irdkosketused == 
 * [http://www.windir.no Oficialine sait]
 
+{{Windir}}
+
 [[Kategorii:Blekmetalgruppad]]
 [[Kategorii:Vikingmetalgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
