*Empty MediaWiki Message*

--- a/Valfar.mw
+++ b/Valfar.mw
@@ -3,6 +3,7 @@
 == Irdkosketused ==
 * [http://www.windir.no/ "Windir"-gruppan oficialine sait]
 
+{{Windir}}
 {{stub}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
