*Empty MediaWiki Message*

--- a/Sóknardalr.mw
+++ b/Sóknardalr.mw
@@ -13,6 +13,7 @@ Sóknardalr om [[Sogndal]]-lidnan [[Amunorvegijan kel'|amuine]] nimi.
 # «Likbør» (8:08)
 # «Sóknardalr» (5:42)
 
+{{Windir}}
 {{stub}}
 
 [[Kategorii:Windir]]
