*Empty MediaWiki Message*

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -28,77 +28,77 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[Net als toen]]»
 | [[Corry Brokken]]
-| Guus Jansen, [[Willy van Hemert]]
-| {{nts|31}}
-| {{nts|14}}
-| {{Esc|France}}
-| 3 March
+| ''Guus Jansen'', ''Willy van Hemert''
+| 31
+| 14
+| [[Francii]]
+| 3. keväz'ku
 | {{flagicon|GER}} [[Frankfurt|Frankfurt am Main]]
 |-
 ! scope="row" | [[Evrovizii-1958|1958]]
 | [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Dors, mon amour]]»
 | [[André Claveau]]
-| [[Pierre Delanoë]], [[Hubert Giraud]]
-| {{nts|27}}
-| {{nts|3}}
-| {{Esc|Switzerland}}
-| 12 March
+| ''Pierre Delanoë'', ''Hubert Giraud''
+| 27
+| 3
+| [[Šveicarii]]
+| 12. keväz'ku
 | {{flagicon|NED}} [[Hilversum]]
 |-
 ! scope="row" | [[Evrovizii-1959|1959]]
 | [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[Een beetje]]»
 | [[Teddy Scholten]]
-| Dick Schallies, [[Willy van Hemert]]
-| {{nts|21}}
-| {{nts|5}}
-| {{Esc|United Kingdom}}
-| 11 March
+| ''Dick Schallies'', ''Willy van Hemert''
+| 21
+| 5
+| [[Sur' Britanii]]
+| 11. keväz'ku
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1960|1960]]
 | [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Tom Pillibi]]»
 | [[Jacqueline Boyer]]
-| [[André Popp]], [[Pierre Cour]]
-| {{nts|32}}
-| {{nts|7}}
-| {{Esc|United Kingdom}}
-| 29 March
+| ''André Popp'', ''Pierre Cour''
+| 32
+| 7
+| [[Sur' Britanii]]
+| 29. keväz'ku
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" | [[Evrovizii-1961|1961]]
 | [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Nous les amoureux]]»
 | [[Jean-Claude Pascal]]
-| [[Jacques Datin]], Maurice Vidalin
-| {{nts|31}}
-| {{nts|6}}
-| {{Esc|United Kingdom}}
-| 18 March
+| ''Jacques Datin'', ''Maurice Vidalin''
+| 31
+| 6
+| [[Sur' Britanii]]
+| 18. keväz'ku
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1962|1962]]
 | [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Un premier amour]]»
 | [[Isabelle Aubret]]
-| Claude-Henri Vic, Roland Stephane Valade
-| {{nts|26}}
-| {{nts|13}}
-| {{Esc|Monaco}}
-| 18 March
+| ''Claude-Henri Vic'', ''Roland Stephane Valade''
+| 26
+| 13
+| [[Monak]]
+| 18. keväz'ku
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1963|1963]]
 | [[Fail:Flag of Denmark.svg|border|20px]] [[Danii]]
 | «[[Dansevise]]»
 | [[Grethe and Jørgen Ingmann]]
-| Otto Francker, Sejr Volmer-Sørensen
-| {{nts|42}}
-| {{nts|2}}
-| {{Esc|Switzerland}}
-| 23 March
+| ''Otto Francker'', ''Sejr Volmer-Sørensen''
+| 42
+| 2
+| [[Šveicarii]]
+| 23. keväz'ku
 | {{flagicon|GBR}} [[London]]<includeonly>
 |}</includeonly></onlyinclude>
 |-
@@ -106,66 +106,66 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Fail:Flag of Italy.svg|border|20px]] [[Italii]]
 | «[[Non ho l'età]]»
 | [[Gigliola Cinquetti]]
-| [[Nicola Salerno]], Mario Pinzeri
-| {{nts|49}}
-| {{nts|32}}
-| {{Esc|United Kingdom}}
-| 21 March
+| ''Nicola Salerno'', ''Mario Pinzeri''
+| 49
+| 32
+| [[Sur' Britanii]]
+| 21. keväz'ku
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-1965|1965]]
 | [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Poupée de cire, poupée de son]]»
 | [[France Gall]]
-| [[Serge Gainsbourg]]
-| {{nts|32}}
-| {{nts|6}}
-| {{Esc|United Kingdom}}
-| 20 March
+| ''Serge Gainsbourg''
+| 32
+| 6
+| [[Sur' Britanii]]
+| 20. keväz'ku
 | {{flagicon|ITA}} [[Naples]]
 |-
 ! scope="row" | [[Evrovizii-1966|1966]]
 | [[Fail:Flag of Austria.svg|border|20px]] [[Avstrii]]
 | «[[Merci, Chérie]]»
 | [[Udo Jürgens]]
-| Udo Jürgens, Thomas Hörbiger
-| {{nts|31}}
-| {{nts|15}}
-| {{Esc|Sweden}}
-| 5 March
+| ''Udo Jürgens'', ''Thomas Hörbiger''
+| 31
+| 15
+| [[Ročinma]]
+| 5. keväz'ku
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1967|1967]]
 | [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Puppet on a String]]»
 | [[Sandie Shaw]]
-| [[Bill Martin (musician)|Bill Martin]], [[Phil Coulter]]
-| {{nts|47}}
-| {{nts|25}}
-| {{Esc|Ireland}}
-| 8 April
+| ''Bill Martin'', ''Phil Coulter''
+| 47
+| 25
+| [[Irlandii]]
+| 8. sulaku
 | {{flagicon|AUT}} [[Vienna]]
 |-
 ! scope="row" | [[Evrovizii-1968|1968]]
 | [[Fail:Flag of Spain.svg|border|20px]] [[Ispanii]]
 | «[[La, la, la]]»
 | [[Massiel]]
-| [[Dúo Dinámico|Manuel de la Calva, Ramón Arcusa]]
-| {{nts|29}}
-| {{nts|1}}
-| {{Esc|United Kingdom}}
-| 6 April
+| ''Manuel de la Calva'', ''Ramón Arcusa''
+| 29
+| 1
+| [[Sur' Britanii]]
+| 6. sulaku
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" rowspan=4|[[Evrovizii-1969|1969]]<ref>Oliba nell' vägestajad.</ref>
 | [[Fail:Flag of Spain.svg|border|20px]] [[Ispanii]]
 | «[[Vivo cantando]]»
 | [[Salomé (singer)|Salomé]]
-| Maria José de Cerato, Aniano Alcalde
-|rowspan=4|{{nts|18}}
-|rowspan=4 {{n/a}}
-|rowspan=4 {{n/a}}
-|rowspan=4| 29 March
+| ''Maria José de Cerato'', ''Aniano Alcalde''
+|rowspan=4| 18
+|rowspan=4 —
+|rowspan=4 —
+|rowspan=4| 29. keväz'ku
 |rowspan=4| {{flagicon|ESP|1945}} [[Madrid]]
 |-
 | [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
