*Empty MediaWiki Message*

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -163,35 +163,35 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Salomé (singer)|Salomé]]
 | ''Maria José de Cerato'', ''Aniano Alcalde''
 |rowspan=4| 18
-|rowspan=4 —
-|rowspan=4 —
+|rowspan=4| —
+|rowspan=4| —
 |rowspan=4| 29. keväz'ku
 |rowspan=4| {{flagicon|ESP|1945}} [[Madrid]]
 |-
 | [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Boom Bang-a-Bang]]»
 | [[Lulu (singer)|Lulu]]
-| Alan Moorhouse, Peter Warne
+| ''Alan Moorhouse'', ''Peter Warne''
 |-
 | [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[De troubadour]]»
 | [[Lenny Kuhr]]
-| Lenny Kuhr, David Hartsema
+| ''Lenny Kuhr'', ''David Hartsema''
 |-
 | [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Un jour, un enfant]]»
 | [[Frida Boccara]]
-| Émile Stern, [[Eddy Marnay]]
+| ''Émile Stern'', ''Eddy Marnay''
 |-
 ! scope="row" | [[Evrovizii-1970|1970]]
 | [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[All Kinds of Everything]]»
 | [[Dana Rosemary Scallon|Dana]]
-| Derry Lindsay, Jackie Smith
-| {{nts|32}}
-| {{nts|6}}
-| {{Esc|United Kingdom}}
-| 21 March
+| ''Derry Lindsay'', ''Jackie Smith''
+| 32
+| 6
+| [[Sur' Britanii]]
+| 21. keväz'ku
 | {{flagicon|NED}} [[Amsterdam]]
 |-
 ! scope="row" | [[Evrovizii-1971|1971]]
