*Empty MediaWiki Message*

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -517,99 +517,99 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Fail:Flag of Denmark.svg|border|20px]] [[Danii]]
 | «[[Fly on the Wings of Love]]»
 | [[Olsen Brothers]]
-| [[Jørgen Olsen]]
+| ''Jørgen Olsen''
 | 195
-| {{nts|40}}
-| {{Esc|Russia}}
-| 13 May
+| 40
+| [[Venäma]]
+| 13. semendku
 | {{flagicon|SWE}} [[Stockholm]]
 |-
 ! scope="row" | [[Evrovizii-2001|2001]]
 | [[Fail:Flag of Estonia.svg|border|20px]] [[Estinma]]
 | «[[Everybody]]»
-| [[Tanel Padar]], [[Dave Benton]] and [[Soul Militia|2XL]]
-| [[Ivar Must]], [[Maian-Anna Kärmas]]
+| [[Tanel Padar]], [[Dave Benton]] & [[Soul Militia|2XL]]
+| ''Ivar Must'', ''Maian-Anna Kärmas
 | 198
-| {{nts|21}}
-| {{Esc|Denmark}}
-| 12 May
+| 21
+| [[Danii]]
+| 12. semendku
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-2002|2002]]
 | [[Fail:Flag of Latvia.svg|border|20px]] [[Latvii]]
 | «[[I Wanna]]»
 | [[Marie N]]
-| Marie N, Marats Samauskis
+| ''Marie N'', ''Marats Samauskis''
 | 176
-| {{nts|12}}
-| {{Esc|Malta}}
-| 25 May
+| 12
+| [[Mal't]]
+| 25. semendku
 | {{flagicon|EST}} [[Tallinn]]
 |-
 ! scope="row" | [[Evrovizii-2003|2003]]
 | [[Fail:Flag of Turkey.svg|border|20px]] [[Turcii]]
 | «[[Everyway That I Can]]»
 | [[Sertab Erener]]
-| [[Demir Demirkan]], Sertab Erener
+| ''Demir Demirkan'', ''Sertab Erener''
 | 167
-| {{nts|2}}
-| {{Esc|Belgium}}
-| 24 May
+| 2
+| [[Bel'gii]]
+| 24. semendku
 | {{flagicon|LVA}} [[Riga]]
 |-
 ! scope="row" | [[Evrovizii-2004|2004]]
 | [[Fail:Flag of Ukraine.svg|border|20px]] [[Ukrain]]
 | «[[Wild Dances]]»
 | [[Ruslana]]
-| Ruslana, Oleksandr Ksenofontov
+| ''Ruslana'', ''Oleksandr Ksenofontov''
 | 280
-| {{nts|17}}
-| {{Esc|Serbia and Montenegro}}
-| 15 May<ref group="N" name="semi final">Since 2004 the contest has included a televised semi-final. In 2004 this was held on the Wednesday before the final, and between 2005 and 2007 it was held on the Thursday of "Eurovision Week". Since 2008 two semi-finals have been held, on Tuesday and Thursday respectively.</ref>
+| 17
+| [[Serbii da Mustmägi]]
+| 15. semendku
 | {{flagicon|TUR}} [[Istanbul]]
 |-
 ! scope="row" | [[Evrovizii-2005|2005]]
 | [[Fail:Flag of Greece.svg|border|20px]] [[Grekanma]]
 | «[[My Number One]]»
 | [[Elena Paparizou]]
-| [[Christos Dantis]], [[Natalia Germanou]]
+| ''Christos Dantis'', ''Natalia Germanou''
 | 230
-| {{nts|38}}
-| {{Esc|Malta}}
-| 21 May
+| 38
+| [[Mal't]]
+| 21. semendku
 | {{flagicon|UKR}} [[Kiev]]
 |-
 ! scope="row" | [[Evrovizii-2006|2006]]
 | [[Fail:Flag of Finland.svg|border|20px]] [[Suomenma]]
 | «[[Hard Rock Hallelujah]]»
 | [[Lordi]]
-| [[Tomi Putaansuu|Mr. Lordi]]
+| ''Tomi Putaansuu''
 | 292
-| {{nts|44}}
-| {{Esc|Russia}}
-| 20 May
+| 44
+| [[Venäma]]
+| 20. semendku
 | {{flagicon|GRE}} [[Athens]]
 |-
 ! scope="row" | [[Evrovizii-2007|2007]]
 | [[Fail:Flag of Serbia.svg|border|20px]] [[Serbii]]
 | «[[Molitva|Молитва]]»
 | [[Marija Šerifović]]
-| Saša Milošević Mare, [[Vladimir Graić]]
+| ''Saša Milošević Mare'', ''Vladimir Graić''
 | 268
-| {{nts|33}}
-| {{Esc|Ukraine}}
-| 12 May
+| 33
+| [[Ukrain]]
+| 12. semendku
 | {{flagicon|FIN}} [[Helsinki]]
-|-
+|-bgcolor = "grass"
 ! scope="row" | [[Evrovizii-2008|2008]]
 | [[Fail:Flag of Russia.svg|border|20px]] [[Venäma]]
 | «[[Believe]]»
 | [[Bilan Dima|Dima Bilan]]
-| [[Jim Beanz]], Dima Bilan
+| ''Jim Beanz'', ''Dima Bilan''
 | 272
-| {{nts|42}}
-| {{Esc|Ukraine}}
-| 24 May<ref group="N" name="two semi finals">Since 2008 the contest has included two semi-finals, held on the Tuesday and Thursday before the final.</ref>
+| 42
+| [[Ukrain]]
+| 24. semendku
 | {{flagicon|SRB}} [[Belgrade]]
 |-
 ! scope="row" | [[Evrovizii-2009|2009]]
@@ -618,42 +618,42 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Alexander Rybak]]
 | Alexander Rybak
 | 387
-| {{nts|169}}
-| {{Esc|Iceland}}
-| 16 May
+| 169
+| [[Islandii]]
+| 16. semendku
 | {{flagicon|RUS}} [[Moscow]]
 |-
 ! scope="row" | [[Evrovizii-2010|2010]]
 | [[Fail:Flag of Germany.svg|border|20px]] [[Saksanma]]
-| «[[Satellite (Lena Meyer-Landrut song)|Satellite]]»
+| «[[Satellite]]»
 | [[Lena Meyer-Landrut|Lena]]
-| [[Julie Frost]], John Gordon
+| ''Julie Frost'', ''John Gordon''
 | 246
-| {{nts|76}}
-| {{Esc|Turkey}}
-| 29 May
+| 76
+| [[Turcii]]
+| 29. semendku
 | {{flagicon|NOR}} [[Oslo]]
 |-
 ! scope="row" | [[Evrovizii-2011|2011]]
 | [[Fail:Flag of Azerbaijan.svg|border|20px]] [[Azerbaidžan]]
 | «[[Running Scared]]»
 | [[Eldar & Nigar|Ell/Nikki]]
-| [[Stefan Örn]], Sandra Bjurman, Iain Farquharson
+| ''Stefan Örn'', ''Sandra Bjurman'', ''Iain Farquharson''
 | 221
-| {{nts|32}}
-| {{Esc|Italy}}
-| 14 May
+| 32
+| [[Italii]]
+| 14. semendku
 | {{flagicon|GER}} [[Düsseldorf]]
 |-
 ! scope="row" | [[Evrovizii-2012|2012]]
 | [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Euphoria]]»
 | [[Lorin]]
-| [[Thomas G:son]], [[Peter Boström]]
+| ''Thomas G:son'', ''Peter Boström''
 | 372
-| {{nts|113}}
-| {{Esc|Russia}}
-| 26 May
+| 113
+| [[Venäma]]
+| 26. semendku
 | {{flagicon|AZE}} [[Baku]]
 |-
 ! scope="row" | [[Evrovizii-2013|2013]]
