*Empty MediaWiki Message*

--- a/Jesenija_(fil'm,_1971).mw
+++ b/Jesenija_(fil'm,_1971).mw
@@ -1,3 +1,4 @@
+{{tärtused|Jesenija}}
 '''«Jesenija»''' ([[ispanijan kel'|isp.]]: ''Yesenia'') om voden [[1971]] [[meksik]]alaine melodram. Režissör — Al'fredo Krevenna.
 
 == Rolid ==
