--- a/HR_7222.mw
+++ b/HR_7222.mw
@@ -1,6 +1,6 @@
 '''HD 177392''' (vai '''BD+21 3648''', '''SAO 86753''', '''HR 7222''') om [[tähtaz]].
 {{stub}}
 
-[[Kategorii:Tähtased]]
+[[Kategorii:Tähthad]]
 
 [[zh:狐狸座LT]]
