--- a/Lomonosovan_rajon_(Leningradan_agj).mw
+++ b/Lomonosovan_rajon_(Leningradan_agj).mw
@@ -1,5 +1,5 @@
 {{Rajon
-| Nimi= Vsevoložskan rajon
+| Nimi= Lomonosovan rajon
 <br />'''Ломоносовский район''
 
 | Znam= Coat of Arms of Lomonosov rayon (Leningrad oblast).png
