*Empty MediaWiki Message*

--- a/Loginova_Lidija.mw
+++ b/Loginova_Lidija.mw
@@ -1,4 +1,4 @@
-'''Lidija Petronva Loginova''' ([[Komikel'|komi]] ''Логинова Петыр Лидьö'', [[Venäkel'|ven.]] ''Логинова Лидия Петровна''; sünd. [[13. kül'mku]], [[1954]]) om [[Komilaižed|komilaine]] pajatai, «Зильган турун» (Heläidai hein) ansamblin čomamahtoine ohjandai. 
+'''Lidija Petrovna Loginova''' ([[Komikel'|komi]] ''Логинова Петыр Лидьö'', [[Venäkel'|ven.]] ''Логинова Лидия Петровна''; sünd. [[13. kül'mku]], [[1954]]) om [[Komilaižed|komilaine]] pajatai, «Зильган турун» (Heläidai hein) ansamblin čomamahtoine ohjandai. 
 
 == Irdkosketused ==
 * [http://www.komiinform.ru/services/persons/56/ Lidijan Loginovan biografii Komiinform-saital]
