--- a/HR_7222.mw
+++ b/HR_7222.mw
@@ -1,4 +1,4 @@
-'''HD 177392''' (vai '''BD+21 3648''', '''SAO 86753''', '''HR 7222''') om [[tähtaz]].
+'''HD 177392''' (vai '''BD+21 3648''', '''SAO 86753''', '''HR 7222''') om [[tähtaz]] [[Rebojut (tähthišt)|Rebojut-tähthištas]].
 {{stub}}
 
 [[Kategorii:Tähthad]]
