--- a/«Ö»-kirjamen_muštpacaz.mw
+++ b/«Ö»-kirjamen_muštpacaz.mw
@@ -1,4 +1,4 @@
-'''«Ö»-kirjamen muštpacaz''' ([[Komikel'|komi]] ''«Ӧ» коми шыпаслы паметник'') — granitmuštpacaz [[Sikrivkar]]as, kudamb om pühätadud [[Komikel'|komin]] «[[Ö (kirilline kirjamišt)|Ö]]»-kirjamele.
+'''«Ö»-kirjamen muštpacaz''' ([[Komikel'|komi]] ''«Ӧ» коми шыпаслы паметник'') — granitmuštpacaz [[Siktivkar]]as, kudamb om pühätadud [[Komikel'|komin]] «[[Ö (kirilline kirjamišt)|Ö]]»-kirjamele.
 
 Muštpacaz om seižutadud vn [[2009]] [[9. heinku|heinkun 9. päiväl]] torgule [[Sikrivkaran komin kul'turan keskuz|Komin kul'turan keskusen]] edehe.
 
