*Empty MediaWiki Message*

--- a/Pätnič.mw
+++ b/Pätnič.mw
@@ -1,5 +1,4 @@
-'''Videnz’päiv''' vai '''pätnič''' om videnz' [[Nedalin päiväd|nedalin päiv]].
-
+'''Videnz'päiv''' vai '''pätnič''' om videnz' [[Nedalin päiväd|nedalin päiv]].
 {{Nedalin päiv}}
 
 [[Kategorii:Nedalin päiväd]]
