*Empty MediaWiki Message*

--- a/Pätnič.mw
+++ b/Pätnič.mw
@@ -1,4 +1,4 @@
-'''Videnz'päiv''' vai '''pätnič''' om videnz' [[Nedalin päiväd|nedalin päiv]].
+'''Pätnič''' (vai '''videnz'päiv''') om videnz' [[Nedalin päiväd|nedalin päiv]].
 {{Nedalin päiv}}
 
 [[Kategorii:Nedalin päiväd]]
