*Empty MediaWiki Message*

--- a/Nedalin_päiväd.mw
+++ b/Nedalin_päiväd.mw
@@ -3,7 +3,7 @@ Kaiked om seičeme '''[[nedal'|nedalin]] päiväd''' <small>(simvoloidenke)</sma
 # [[Tožnarg]] (♂)
 # [[Koumanz'päiv]] (☿)
 # [[Nellänz'päiv]] (♄)
-# [[Videnz'päiv]] (♀)
+# [[Pätnič]] (♀)
 # [[Sobat]] (♃)
 # [[Pühäpäiv]] (☉)
 {{stub}}
