ссылка на статью как в фиВП

--- a/Puvill.mw
+++ b/Puvill.mw
@@ -1,5 +1,5 @@
 [[Fail:Gûzika pembo.jpg|thumb|right|250px|Küpsnettud lopotuz]]
-'''Puvill''' om kazmuz[[kuid]], kudambad tehtas [[lopotuz|lopotusen]] (''Gossypium'') korobaižešpäi.
+'''Puvill''' om kazmuz[[kuid]], kudambad tehtas [[puvillad|puvillkazmusen]] (''Gossypium'') korobaižešpäi.
 {{stub}}
 
 [[Kategorii:Kazmuzkuidad]]
