*Empty MediaWiki Message*

--- a/«Ö»-kirjamen_muštpacaz.mw
+++ b/«Ö»-kirjamen_muštpacaz.mw
@@ -4,7 +4,7 @@ Muštpacaz om seižutadud vn [[2009]] [[9. heinku|heinkun 9. päiväl]] torgule 
 
 == Irdkosketused ==
 
-* [http://komionline.ru/news/27436 Сыктывкаре установлен памятник букве «ö»]
+* [http://komionline.ru/news/27436 В Сыктывкаре установлен памятник букве «ö»]
 * [http://rassykhaev.livejournal.com/24968.html| Установка буквы "Ö" - знаковое событие культурной жизни Коми]
 
 {{stub}}
