*Empty MediaWiki Message*

--- a/Puvill.mw
+++ b/Puvill.mw
@@ -1,5 +1,5 @@
-[[Fail:Gûzika pembo.jpg|thumb|right|250px|Küpsnettud lopotuz]]
-'''Puvill''' om kazmuz[[kuid]], kudambad tehtas [[puvillad|puvillkazmusen]] (''Gossypium'') korobaižešpäi.
+[[Fail:Gûzika pembo.jpg|thumb|right|250px|Küpsnettud puvillan kazmuz]]
+'''Puvill''' om kazmuz[[kuid]], kudambad tehtas [[puvillad|puvillan kazmusen]] (''Gossypium'') korobaižešpäi.
 {{stub}}
 
 [[Kategorii:Kazmuzkuidad]]
