*Empty MediaWiki Message*

--- a/Tau.mw
+++ b/Tau.mw
@@ -1,5 +1,9 @@
+[[File:Tau uc lc.svg|right|160px]]
+
 '''Tau''' ('''Τ''', '''τ''') om [[Grekan kirjamišt|grekan kirjamišton]] ühesanz'toštkümnenz' kirjam.
 {{stub}}
+
+
 
 [[Kategorii:Grekan kirjamed]]
 
