*Empty MediaWiki Message*

--- a/Tau.mw
+++ b/Tau.mw
@@ -1,9 +1,6 @@
-[[File:Tau uc lc.svg|right|160px]]
-
+[[Fail:Tau uc lc.svg|right|160px]]
 '''Tau''' ('''Τ''', '''τ''') om [[Grekan kirjamišt|grekan kirjamišton]] ühesanz'toštkümnenz' kirjam.
 {{stub}}
-
-
 
 [[Kategorii:Grekan kirjamed]]
 
