*Empty MediaWiki Message*

--- a/Stronghold_(vändoiden_serii).mw
+++ b/Stronghold_(vändoiden_serii).mw
@@ -1,4 +1,4 @@
-'''Stronghold''' om kompjuterižiden vändoiden strategijan žanras serii.
+'''Stronghold''' om [[kompjuterine vänd|kompjuterižiden vändoiden]] strategijan žanras serii.
 
 Serijan säi om [[Firefly Studios]].
 
