*Empty MediaWiki Message*

--- a/Mi?_Kus?_Konz?.mw
+++ b/Mi?_Kus?_Konz?.mw
@@ -9,7 +9,7 @@ Nügüd'läine vedai om [[Krük Boris|Boris Krük]].
 * [http://чтогдекогда.рф/ "Mi? Kus? Konz?":an internet-portal]
 
 {{stub}}
-[[Kategorii:TV-vändad]]
+[[Kategorii:TV-vändod]]
 [[Kategorii:Mi? Kus? Konz?|*]]
 [[Kategorii:TV-šoud]]
 [[Kategorii:Ezmäine kanal]]
