*Empty MediaWiki Message*

--- a/MoRandi.mw
+++ b/MoRandi.mw
@@ -2,7 +2,7 @@
  | Nimi = MoRandi
  | Logo = 
  | Foto = 
- | Žanrad = [[evropop]]
+ | Žanrad = [[evropop]], [[haus (muzikaline žanr)|haus]]
  | Voded = 2004—…
  | Valdkund = Romanii
  | Lidn = Buharest
@@ -27,6 +27,7 @@
 [[Kategorii:Evropopgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Romanijan muzikgruppad]]
+[[Kategorii:Hausgruppad]]
 [[Kategorii:MoRandi|*]]
 
 [[bg:Моранди]]
