--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -44,8 +44,8 @@
 * ''[[In 100 Years...]]'' (1987)
 * ''[[We Take the Chance]]'' (1998)
 * ''[[You Are Not Alone]]'' (1999)
-* ''[[Sexy Sexy Lover]]'' (1999)
-* ''[[China In Her Eyes]]'' (2000)
+* ''[[Sexy, Sexy Lover]]'' (1999)
+* ''[[China in Her Eyes]]'' (2000)
 * ''[[Don't Take Away My Heart]]'' (2000)
 * ''[[Win The Race]]'' (2001)
 * ''[[Last Exit To Brooklyn]]'' (2001)
