--- a/Don't_Take_Away_My_Heart.mw
+++ b/Don't_Take_Away_My_Heart.mw
@@ -1,4 +1,4 @@
-'''«Don't Take Away My Heart»''' (''???'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[Year of the Dragon]]»-al'bomas, kudamb om pästtud [[2000]]-žen voden semendkul.
+'''«Don't Take Away My Heart»''' (''Ala rästa minun südäin'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[Year of the Dragon]]»-al'bomas, kudamb om pästtud [[2000]]-žen voden semendkul.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
