*Empty MediaWiki Message*

--- a/Komin_familijad.mw
+++ b/Komin_familijad.mw
@@ -9,7 +9,7 @@ Kaik nügüdläižed komin familijad kävutadas [[Venäkel'|venän]] nimiden teg
 
 === Familijad juridenke komikelespäi ===
 
-* Burmatov — «бур» (hüvä) i «морт» (ristit, mez')
+* Burmatov (Бурматов) — «бур» (hüvä) i «морт» (ristit, mez')
 * [[Bizunov]] (Бызунов) — «быздыны» (räpätada, rän'stä)
 * [[Vilesov]] (Вилесов) — «вильос» (uz')
 * [[Volegov]] (Волегов) — «вильог» (скользкий, хитрый, ловкий)
