*Empty MediaWiki Message*

--- a/Komin_familijad.mw
+++ b/Komin_familijad.mw
@@ -12,7 +12,7 @@ Kaik nügüdläižed komin familijad kävutadas [[Venäkel'|venän]] nimiden teg
 * Burmatov (Бурматов) — «бур» (hüvä) i «морт» (ristit, mez')
 * [[Bizunov]] (Бызунов) — «быздыны» (räpätada, rän'stä)
 * [[Vilesov]] (Вилесов) — «вильос» (uz')
-* [[Volegov]] (Волегов) — «вильог» (скользкий, хитрый, ловкий)
+* [[Volegov]] (Волегов) — «вильог» (libed, nüga, čopak)
 * [[Gabov]] (Габов) — «Габ» (Agapit, hrist. nimi)
 * [[Gutov]] (Гутов) — «гут» (käbhaine)
 * [[Dozmorov]] (Дозморов) — «дозмöр» (mecoi)
