*Empty MediaWiki Message*

--- a/Arntor.mw
+++ b/Arntor.mw
@@ -17,3 +17,5 @@ Nece om jäl'gmäine al'bom, kudambas [[Valfar]] vändi kaikiš instrumentoiš i
 
 [[Kategorii:Windir]]
 [[Kategorii:Al'bomad kirjamišton mödhe]]
+
+[[no:Arntor (album)]]
