--- a/SognaMetal.mw
+++ b/SognaMetal.mw
@@ -27,3 +27,5 @@ Se om edestadud sügüz'kun 3. päiväl, konz oliži [[Valfar]]an 26-nz' sündun
 
 [[Kategorii:Windir]]
 [[Kategorii:Al'bomad kirjamišton mödhe]]
+
+[[en:Sognametal]]
