*Empty MediaWiki Message*

--- a/SognaMetal.mw
+++ b/SognaMetal.mw
@@ -1,4 +1,4 @@
-'''«Sognametal»''' om norvegijalaižen [[Windir]]-gruppan DVD, pästtud vl [[2005]].
+'''«SognaMetal»''' om norvegijalaižen [[Windir]]-gruppan DVD, pästtud vl [[2005]].
 
 Se om edestadud sügüz'kun 3. päiväl, konz oliži [[Valfar]]an 26-nz' sündundpäiv. Nece om Windir:an jäl'gmäine pajomaterial, kudamb znamoičeb gruppan lopun.
 
