--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -47,11 +47,11 @@
 * ''[[Sexy, Sexy Lover]]'' (1999)
 * ''[[China in Her Eyes]]'' (2000)
 * ''[[Don't Take Away My Heart]]'' (2000)
-* ''[[Win The Race]]'' (2001)
-* ''[[Last Exit To Brooklyn]]'' (2001)
+* ''[[Win the Race]]'' (2001)
+* ''[[Last Exit to Brooklyn]]'' (2001)
 * ''[[Juliet]]'' (2001)
-* ''[[Ready For The Victory]]'' (2002)
-* ''[[TV Makes The Superstar]]'' (2003)
+* ''[[Ready for the Victory]]'' (2002)
+* ''[[TV Makes the Superstar]]'' (2003)
 
 == Kacu mugažo ==
 * [[Blue System]]
