*Empty MediaWiki Message*

--- a/Amerik.mw
+++ b/Amerik.mw
@@ -1,7 +1,11 @@
-[[Fail:Americas (orthographic projection).svg|thumb|300px|Amerika]]
-'''Amerik''' om kontinent.
+[[Fail:Americas (orthographic projection).svg|thumb|300px|Amerik]]
+'''Amerik''' om [[kontinent]].
 
 Pind — 42,1 millionad km², Eläjiden lugu — 885,8 mln.
+
+== Kacu mugažo ==
+* [[Pohjoižamerik]]
+* [[Suviamerik]]
 
 {{Kontinentad}}
 {{stub}}
