--- a/Livin_kel'.mw
+++ b/Livin_kel'.mw
@@ -1,4 +1,4 @@
-'''Livin kel'''' (Livin: ''līvõ kēļ'') om suomalaiž-ugrilaine, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Kelen kandajad elädas tobjimalaz [[Latvii|Latvijas]].
+'''Livin kel'''' (Livin: ''līvõ kēļ'') om suomalaiž-ugrilaine, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Kelen kandajad elädas [[Latvii|Latvijas]].
 
 == Livin kirjankelen kirjamišt ==
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
@@ -50,15 +50,16 @@
 | style="width:4em; text-align:center; padding: 4px;" | Ž ž
 |}
 
+== Kacu mugažo ==
+* [[Livin Vikipedii]]
+
 == Irdkosketused ==
 * [http://www.ethnologue.com/show_language.asp?code=liv Ethnologue report for Livonian]
-* [http://www.livones.lv/ Livin kul’turan da kelen portal]
+* [http://www.livones.lv/ Livin kul'turan da kelen portal]
 
 {{DEFAULTSORT:Livin kel’}}
-
 {{stub}}
 [[Kategorii:Keled]]
-[[Kategorii:Latvii]]
 
 [[af:Lyfs]]
 [[als:Livische Sprache]]
