*Empty MediaWiki Message*

--- a/Zaleptus_vigilans.mw
+++ b/Zaleptus_vigilans.mw
@@ -1,4 +1,4 @@
-'''''Zaleptus vigilans''''' om gaved'. Kudamban avaiži da ümbrikirjuti vl. 1903 entomolog With.<ref>http://insects.tamu.edu/research/collection/hallan/Acari/Family/Sclerosomatidae.txt</ref> Necil gavedil ei ole völ nimid rahvahaližil kelil.
+'''''Zaleptus vigilans''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. 1903 entomolog Vit..<ref>http://insects.tamu.edu/research/collection/hallan/Acari/Family/Sclerosomatidae.txt</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
 
 == Homaičendad ==
 <references />
