--- a/New_York_City_Girl.mw
+++ b/New_York_City_Girl.mw
@@ -1,4 +1,4 @@
-'''«New York City Girl»''' (''Neižne [[Uz' Jork|Uden Jorkaspäi]]'') om 15. pajo [[Modern Talking]]:an «[[America]]»-al'bomas.
+'''«New York City Girl»''' (''Neižne [[Uz' Jork|Udes Jorkaspäi]]'') om 15. pajo [[Modern Talking]]:an «[[America]]»-al'bomas.
 
 Pajon [[butleg]]-singl om pästtud [[2001]]-žel vodel DJ RavL:alpäi.
 {{stub}}
