Если с инфтнитивом, аккузатив нельзя

--- a/Win_the_Race.mw
+++ b/Win_the_Race.mw
@@ -1,4 +1,4 @@
-'''«Win the Race»''' (''Vägestada voibištelendan'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[America]]»-al'bomas, kudamb om pästtud [[2001]]-žen voden uhokul.
+'''«Win the Race»''' (''Vägestada voibištelendas'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[America]]»-al'bomas, kudamb om pästtud [[2001]]-žen voden uhokul.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
