*Empty MediaWiki Message*

--- a/Witchqueen_of_Eldorado.mw
+++ b/Witchqueen_of_Eldorado.mw
@@ -1,6 +1,6 @@
 '''«Witchqueen of Eldorado»''' (''Noidak [[El'dorado]]späi'') om tetab [[Modern Talking]]:an pajo «[[America]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Hot' nece pajo ei olend pästtud kut singl, kompozicii om mülütud [[Čili]]n, [[Peru]]n, [[Argentin]]an, [[Brazilii|Brazilijan]], [[Japonii|Japonijan]], [[Suviafrik]]an da toiž. valdkundoiden [[hit]]paradoiš.
+Hot' nece pajo ei olend pästtud kut singl, kompozicii om mülütud [[Čili]]n, [[Peru]]n, [[Argentin]]an, [[Brazilii|Brazilijan]], [[Japonii|Japonijan]], [[Suviafrik]]an da toiž. valdkundoiden [[hit]]paradoihe.
 {{stub}}
 {{Modern Talking}}
 
