Игорь сказал, слитно тут нельзя, только в отношении с venäkel'

--- a/Komin_familijad.mw
+++ b/Komin_familijad.mw
@@ -1,4 +1,4 @@
-'''Komin familijad''' ([[Komikel'|komi]] ''Коми овъяс'') — [[Komilaižed|komin rahvahan]] sugu- da kanzannimitused.
+'''Komin familijad''' ([[Komin kel'|komi]] ''Коми овъяс'') — [[Komilaižed|komin rahvahan]] sugu- da kanzannimitused.
 
 == Struktur ==
 
@@ -63,6 +63,7 @@ Kaik nügüdläižed komin familijad kävutadas [[Venäkel'|venän]] nimiden teg
 
 {{stub}}
 
+[[Kategorii:Komilaižed]]
 [[Kategorii:Familijad keliden mödhe]]
 
 [[koi:Коми зыряналӧн гишшаннэз]]
