*Empty MediaWiki Message*

--- a/Voiviv_Kodzuv.mw
+++ b/Voiviv_Kodzuv.mw
@@ -1,4 +1,4 @@
-'''«Voiviv Kodzuv»''' ''(Pohjoine tähtaz)'' ([[Komikel'|komi]] ''«Войвыв кодзув»'') om [[Komikel'|komikel'ne]] literaturiž-čomamahtoine da kundaliž-politine aiglehtez.
+'''«Voiviv Kodzuv»''' ''(Pohjoine tähtaz)'' ([[Komin kel'|komi]] ''«Войвыв кодзув»'') om [[Komin kel'|kominkel'ne]] literaturiž-čomamahtoine da kundaliž-politine aiglehtez.
 
 Aiglehtest pästtas [[Siktivkar]]as, sen aluz om pandud vl [[1926]]. Tiraž — 938 ekzemplärad.
 
@@ -6,7 +6,7 @@ Aiglehtest pästtas [[Siktivkar]]as, sen aluz om pandud vl [[1926]]. Tiraž — 
 
 [[Kategorii:Aiglehtesed]]
 [[Kategorii:Komin Tazovaldkund]]
-[[Kategorii:Komikel']]
+[[Kategorii:Komin kel']]
 
 [[et:Voivõv Kodzuv]]
 [[fi:Voivyv kodźuv]]
