*Empty MediaWiki Message*

--- a/Čužan_kiv.mw
+++ b/Čužan_kiv.mw
@@ -1,4 +1,4 @@
-'''«Čužan kiv»''' ''(Mamankel')'' ([[Komikel'|komi]] ''«Чужан кыв»'', [[Venäkel'|ven.]] ''«Родной язык»'') om tedometodine aiglehtez [[Komin Tazovaldkund]]as.
+'''«Čužan kiv»''' ''(Mamankel')'' ([[Komin kel'|komi]] ''«Чужан кыв»'', [[Venäkel'|ven.]] ''«Родной язык»'') om tedometodine aiglehtez [[Komin Tazovaldkund]]as.
 
 Pästtas vlpäi [[1997]]. Lähtleb kaks' kerdad vodes. Tiraž — 500 ekzemplärad.
 
@@ -6,7 +6,7 @@ Pästtas vlpäi [[1997]]. Lähtleb kaks' kerdad vodes. Tiraž — 500 ekzemplär
 
 [[Kategorii:Aiglehtesed]]
 [[Kategorii:Komin Tazovaldkund]]
-[[Kategorii:Komikel']]
+[[Kategorii:Komin kel']]
 
 [[cv:Чужан кыв (журнал)]]
 [[kv:Чужан кыв (журнал)]]
