*Empty MediaWiki Message*

--- a/Komin_Tazovaldkund.mw
+++ b/Komin_Tazovaldkund.mw
@@ -1,6 +1,6 @@
 [[Fail:Flag of Komi.svg|150px|thumb|border|Komin Tazovaldkundan flag]]
 [[Fail:Coat of Arms of the Komi Republic.svg|100px|thumb|Komin Tazovaldkundan znam]]
-'''Komin Tazovaldkund''' ([[Venäkel'|ven.]]: ''Республика Коми'', [[komikel'|komi]]: ''Коми Республика'') om üks' [[Venälaine Federacii|Venälaižen Federacijan]] tazovaldkundoišpäi.
+'''Komin Tazovaldkund''' ([[Venäkel'|ven.]]: ''Республика Коми'', [[komin kel'|komi]]: ''Коми Республика'') om üks' [[Venälaine Federacii|Venälaižen Federacijan]] tazovaldkundoišpäi.
 
 Mülüb [[Lodehline federaline ümbrik|Lodehližhe federaližhe ümbrikho]].
 
@@ -12,7 +12,7 @@ Eläjiden lugu om läz 902 000 rist.
 
 Pind om läz 417 000 km².
 
-Valdkundkeled oma [[venäkel']] da [[komikel']].
+Valdkundkeled oma [[venäkel']] da [[komin kel']].
 
 Tazovaldkundas om 10 lidnad.
 
