*Empty MediaWiki Message*

--- a/Siktivkar.mw
+++ b/Siktivkar.mw
@@ -9,7 +9,7 @@
 |-
 |Pind|| 152 km²
 |}
-'''Siktivkar''' (ven. ''Сыктывкар'', komi. ''Сыктывкар'') om lidn [[Venäma]]s. Se om [[Komin Tazovaldkund]]an pälidn.
+'''Siktivkar''' ([[Venäkel'|ven.]] ''Сыктывкар'', [[Komin kel'|komi]] ''Сыктывкар'') om lidn [[Venäma]]s. Se om [[Komin Tazovaldkund]]an pälidn.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
