--- a/Komin_Tazovaldkund.mw
+++ b/Komin_Tazovaldkund.mw
@@ -17,7 +17,7 @@ Valdkundkeled oma [[venäkel']] da [[komin kel']].
 Tazovaldkundas om 10 lidnad.
 
 == Kacu mugažo ==
-* [[Komi Tazovaldkundan lidnad]]
+* [[Komin Tazovaldkundan lidnad]]
 
 {{Šablon:Venälaižen Federacijan subjektad}}
 
