*Empty MediaWiki Message*

--- a/Int.mw
+++ b/Int.mw
@@ -1,7 +1,8 @@
-'''Int''' ([[Venäkel'|ven]].: ''Инта'', [[Komi kel'|komi]]: ''Инта'') om lidn [[Venäma|Venämas]], [[Komi Tazovaldkund|Komi Tazovaldkundas]].
+'''Int''' ([[Venäkel'|ven]].: ''Инта'', [[Komin kel'|komi]]: ''Инта'') om lidn [[Venäma|Venämas]], [[Komin Tazovaldkund]]as.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ar:إنتا]]
