*Empty MediaWiki Message*

--- a/Jemv.mw
+++ b/Jemv.mw
@@ -1,6 +1,7 @@
-'''Jemv''' ([[Venäkel'|ven]].: ''Емва'', [[Komi kel'|komi]]: ''Емва'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Jemv''' ([[Venäkel'|ven]].: ''Емва'', [[Komin kel'|komi]]: ''Емва'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
