*Empty MediaWiki Message*

--- a/Mikun'.mw
+++ b/Mikun'.mw
@@ -1,6 +1,7 @@
-'''Mikun'''' ([[Venäkel'|ven]].: ''Микунь'', [[Komi kel'|komi]]: ''Микунь'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Mikun'''' ([[Venäkel'|ven]].: ''Микунь'', [[Komin kel'|komi]]: ''Микунь'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
