*Empty MediaWiki Message*

--- a/Sosnogorsk.mw
+++ b/Sosnogorsk.mw
@@ -1,6 +1,7 @@
-'''Sosnogorsk''' ([[Venäkel'|ven]].: ''Сосногорск'', [[Komi kel'|komi]]: ''Сӧснагорт'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Sosnogorsk''' ([[Venäkel'|ven]].: ''Сосногорск'', [[Komin kel'|komi]]: ''Сӧснагорт'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
