*Empty MediaWiki Message*

--- a/Pečor_(lidn).mw
+++ b/Pečor_(lidn).mw
@@ -1,7 +1,8 @@
 {{tärtused|Pečor}}
-'''Pečor''' ([[Venäkel'|ven]].: ''Печора'', [[Komi kel'|komi]]: ''Печӧра'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Pečor''' ([[Venäkel'|ven]].: ''Печора'', [[Komin kel'|komi]]: ''Печӧра'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
