--- a/Uht.mw
+++ b/Uht.mw
@@ -1,6 +1,7 @@
-'''Uht''' ([[Venäkel'|ven]].: ''Ухта'', [[Komi kel'|komi]]: ''Уква'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Uht''' ([[Venäkel'|ven]].: ''Ухта'', [[Komin kel'|komi]]: ''Уква'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
