*Empty MediaWiki Message*

--- a/Usinsk.mw
+++ b/Usinsk.mw
@@ -1,6 +1,7 @@
-'''Usinsk''' ([[Venäkel'|ven]].: ''Усинск'', [[Komi kel'|komi]]: ''Ускар'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Usinsk''' ([[Venäkel'|ven]].: ''Усинск'', [[Komin kel'|komi]]: ''Ускар'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
