--- a/Vorkut.mw
+++ b/Vorkut.mw
@@ -1,6 +1,7 @@
-'''Vorkut''' ([[Venäkel'|ven]].: ''Воркута'', [[Komi kel'|komi]]: ''Вӧркута'') om lidn [[Venäma]]s, [[Komi Tazovaldkund]]as.
+'''Vorkut''' ([[Venäkel'|ven]].: ''Воркута'', [[Komin kel'|komi]]: ''Вӧркута'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
+[[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
