*Empty MediaWiki Message*

--- a/Permin_rand.mw
+++ b/Permin_rand.mw
@@ -4,7 +4,7 @@
 
 Mülüb [[Volgaveren federaline ümbrik|Volgaveren federaližhe ümbrikho]].
 
-Randal oma röunad [[Komi Tazovaldkund]]anke, [[Kirovan agj]]anke, [[Udmurtijan Tazovaldkund]]anke, [[Baškortostanan Tazovaldkund]]anke da [[Sverdlovskan agjanke]].
+Randal oma röunad [[Komin Tazovaldkund]]anke, [[Kirovan agj]]anke, [[Udmurtijan Tazovaldkund]]anke, [[Baškortostanan Tazovaldkund]]anke da [[Sverdlovskan agjanke]].
 
 Randan keskuz om [[Perm']].
 
